--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "intro-to-express",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marcos Peña Pollastri",
