--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "intro-to-express",
-  "version": "1.0.0",
+  "name": "tasks",
+  "version": "1.1.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Marcos Peña Pollastri",
+  "author": "Miguel Perez",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "dependencies": {
     "express": "^4.17.1"
   }
