--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "intro-to-express",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Marcos Peña Pollastri",
+  "author": "Javier Caamaño",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
