modified file app.js and package.json

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Marcos Peña Pollastri",
+  "author": "Lorena Moesch",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
