--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "intro-to-express",
-  "version": "1.0.0",
-  "description": "",
+  "name": "prueba",
+  "version": "1.1.0",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Marcos Peña Pollastri",
+  "author": "Esteban Luna Mercado",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/restebanlm/course-4-task-1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/restebanlm/course-4-task-1/issues"
+  },
+  "homepage": "https://github.com/restebanlm/course-4-task-1#readme",
+  "description": ""
 }
